feat: add blog post layout and decomposed component dependencies feat: add utility script for date formatting style: lighten font colour on page heading for consistency

--- a/src/components/PageHeading.astro
+++ b/src/components/PageHeading.astro
@@ -5,7 +5,7 @@
   <div class="max-w-3xl mx-auto mt-10 px-4 sm:px-6 mb-4">
     <div class="text-center">
       <h1
-        class="text-5xl md:text-[3.50rem] font-bold tracking-tight leading-tighter"
+        class="text-3xl md:text-5xl md:text-[3.50rem] font-bold tracking-tight leading-tighter dark:text-zinc-200"
       >
         <slot />
       </h1>
