style: improve padding on githublink component for responsive feat: add tag page

--- a/src/components/GitHubLink.astro
+++ b/src/components/GitHubLink.astro
@@ -17,7 +17,7 @@ const label = "View example code on GitHub";
     target="_blank"
     rel="noopener"
   >
-    <span class="px-3 py-1.5">
+    <span class="pr-4 py-1.5">
       <Icon name="bi:github" class="w-5 h-5" />
     </span>
     <span class="text-normal font-medium">{label}</span>
@@ -26,7 +26,7 @@ const label = "View example code on GitHub";
       viewBox="0 0 20 20"
       fill="currentColor"
       aria-hidden="true"
-      class="ml-2 w-5 h-5"
+      class="ml-3 w-5 h-5"
     >
       <path
         fill-rule="evenodd"
