--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -12,7 +12,7 @@ import SocialLinkIcon from "@components/SocialLinkIcon.astro";
         src={headshot}
         width={200}
         height={200}
-        alt="Clark Mains headshot"
+        alt={SITE.author}
         class="rounded-full order-first md:order-1 w-[100px]"
       />
     </div>
