--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import { SITE } from "@utils/site.config.mjs";
 import Layout from "@layouts/BaseLayout.astro";
 import Hero from "@components/Hero.astro";
 import Card from "@components/FeaturedPostCard.astro";
@@ -10,7 +11,7 @@ const posts = (await Astro.glob("./blog/*.{md,mdx}")).sort(
     new Date(a.frontmatter.date).valueOf()
 );
 
-const recentPosts = posts.slice(0, 2);
+const recentPosts = posts.slice(0, SITE.recentPosts);
 ---
 
 <Layout>
