refactor: rename form component

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,7 +2,7 @@
 import { Picture } from "@astrojs/image/components";
 import Layout from "@layouts/BaseLayout.astro";
 import PageHeading from "@components/PageHeading.astro";
-import GenericForm from "@components/GenericForm.astro";
+import ContactForm from "@components/ContactForm.astro";
 ---
 
 <Layout>
@@ -55,7 +55,7 @@ import GenericForm from "@components/GenericForm.astro";
         If you want to get touch, please do so using the form here or connect
         with me on LinkedIn. I look forward to hearing from you!
       </p>
-      <GenericForm name="contact" heading="Contact Me" />
+      <ContactForm name="contact" heading="Contact Me" />
     </section>
   </article>
 </Layout>
