style: remove drop shadows from all images

--- a/src/layouts/BlogPostLayout.astro
+++ b/src/layouts/BlogPostLayout.astro
@@ -45,7 +45,7 @@ const {
       </div>
       {github && <GitHubLink link={github} />}
       <div
-        class="container px-4 sm:px-6 mx-auto max-w-3xl prose prose-lg prose-zinc dark:prose-invert prose-img:rounded-md prose-img:shadow-lg prose-code:before:content-none prose-code:after:content-none"
+        class="container px-4 sm:px-6 mx-auto max-w-3xl prose prose-lg prose-zinc dark:prose-invert prose-img:rounded-md prose-code:before:content-none prose-code:after:content-none"
       >
         <slot />
         <Comments />
