--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -19,7 +19,7 @@ import ContactForm from "@components/ContactForm.astro";
   </div>
 
   <article
-    class="container px-4 sm:px-6 mx-auto max-w-3xl prose prose-lg prose-zinc dark:prose-invert prose-img:rounded-md prose-img:shadow-lg"
+    class="container px-4 sm:px-6 mx-auto max-w-3xl prose prose-lg prose-zinc dark:prose-invert prose-img:rounded-md"
   >
     <section>
       <p>Hi, I'm Clark. A cloud engineer, builder and DevOps practitioner.</p>
