--- a/src/components/BlogPostCard.astro
+++ b/src/components/BlogPostCard.astro
@@ -9,11 +9,11 @@ const { post } = Astro.props;
 <article>
   <a class="relative block group" href={post.url}>
     <div
-      class="relative h-0 pb-[56.25%] overflow-hidden bg-zinc-400 dark:bg-inherit rounded-sm shadow-lg dark:shadow-none"
+      class="relative h-0 pb-[56.25%] overflow-hidden bg-zinc-400 dark:bg-inherit rounded-sm"
     >
       <Picture
         src={post.frontmatter.image}
-        class="absolute inset-0 object-cover w-full h-full mb-6 rounded-sm shadow-lg bg-zinc-400 dark:bg-inherit dark:shadow-none"
+        class="absolute inset-0 object-cover w-full h-full mb-6 rounded-sm bg-zinc-400 dark:bg-inherit"
         widths={[400, 900]}
         sizes="(max-width: 900px) 400px, 900px"
         alt={post.frontmatter.title}
