fix: correct responsive image sizes

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -11,8 +11,8 @@ import ContactForm from "@components/ContactForm.astro";
   <div class="mx-auto max-w-4xl py-4">
     <Picture
       src={"/images/about/mercedes-berlin.jpg"}
-      widths={[400, 900]}
-      sizes="(max-width: 900px) 400px, 900px"
+      widths={[700, 1000]}
+      sizes="(max-width: 700px) 700px, 1000px"
       alt={"Clark Mains"}
       aspectRatio="16:9"
     />
@@ -58,4 +58,5 @@ import ContactForm from "@components/ContactForm.astro";
       <ContactForm name="contact" heading="Contact Me" />
     </section>
   </article>
+</Layout>
 </Layout>
